chore(dev): [#59372] add pyupgrade to ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,8 @@ DEP002 = [
 
 [tool.ruff.lint]
 extend-select = [
+    # pyupgrade
+    "UP",
     # flake8-bugbear
     "B",
     # flake8-simplify
