--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ queries_path = "queries.graphql"
 plugins = [
     # Return values directly when only a single top field is requested
     "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
+    "FastRAMQPI.fastramqpi.ariadne.UnsetInputTypesPlugin",
 ]
 include_comments = false
 [tool.ariadne-codegen.scalars.DateTime]
